<resources>
    <string name="app_name">Pet Stop</string>
    <string name="loadingMessage">loading…</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="createAccountText">"Create Account."</string>
    <string name="dontHaveAccountQuestion">"Don't have an account? Sign up here."</string>
    <string name="haveAccountQuestion">"Have an account already? Log in here."</string>
    <string name="signUpText">"Sign up."</string>
    <string name="signInText">"Login."</string>
    <string name="passwordHintText">"Password."</string>
    <string name="confirmPasswordText">"Confirm Password."</string>


    <string name="emailText">"Email (you@example.com)."</string>
    <string name="nameText">"Name."</string>
    <string name="title_activity_login">"Login."</string>
    <string name="reloadButton">"Reload"</string>
    <string name="LogInNoConnection">"You need an internet connection to login."</string>
    <string name="SignUpNoConnection">"You need an internet connection to sign up."</string>
    <string name="connectionDropped">"Hmmm, your connection may have a problem."</string>
    <string name="connectionDropped2">"Your connection may have a few problems."</string>
    <string name="connectToInternet">"You need an internet connection…"</string>
    <string name="noInternetForLoadAds">You need an internet connection to load the ads.</string>
    <string name="settingUpMessage2">Setting up...</string>
    <string name="signUpPasswordNote">Note: put a secure password that you can remember.</string>

    <string name="confirmEmail">"We've sent you an email for verification. The app will automatically detect that you're verified and you will be able to access and use the app."</string>
    <string name="reconfirmEmail">"To continue, you need to first verify your email address. The app will automatically detect that you're verified and you'll be able to use the app."</string>

    <string name="foodName">Food Item Name.</string>
    <string name="quantityAmm">Quantity.</string>
    <string name="describeItem">Describe your food item.</string>
    <string name="retailPrice">Items price(in Ksh).</string>
    <string name="category">Category</string>

    <string name="needUserDetails">We also need a few more details from you before we can continue.</string>


    <string name="itemtype">Food Category</string>
    <string name="itemtype1">Guinea Pig</string>
    <string name="itemtype2">Hamster</string>
    <string name="itemtype3">Dog</string>
    <string name="itemtype4">Rabbit</string>
    <string name="itemtype5">Cat</string>
</resources>

