<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/SignUpCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signUpRelative"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUpText"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/nameText"
                android:nextFocusDown="@+id/passwordEditText"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/emailText"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/passwordEditText"
                android:padding="10dp"
                android:layout_marginBottom="25dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:gravity="left"
                android:textSize="11sp"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:layout_marginBottom="7dp"
                android:id="@+id/dontForgetStuff"
                android:textColor="@color/colorPrimary"
                android:text="@string/signUpPasswordNote"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/passwordHintText"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/confirmPasswordEditText"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/confirmPasswordText"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <Button
                android:id="@+id/createUserButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/signUpText"
                style="?android:attr/borderlessButtonStyle"
                android:background="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/haveAccountQuestion"
                android:id="@+id/loginTextView"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="match_parent">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/SignUpAvi"
            android:layout_width="40dp"
            android:layout_height="40dp"
            style="@style/AVLoadingIndicatorView"
            android:visibility="gone"
            app:indicatorName="LineScaleIndicator"
            app:indicatorColor="@color/colorPrimary" />

        <ProgressBar
            android:id="@+id/progressBarSignUp"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="Loading..."
            android:id="@+id/creatingAccountLoadingText"
            android:textSize="10sp"
            android:visibility="gone"
            android:layout_height="wrap_content" />
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>